Fix cut off

--- a/static/sass/_pattern_strip.scss
+++ b/static/sass/_pattern_strip.scss
@@ -103,7 +103,7 @@
       linear-gradient(270deg, #E95420 20%, #772953 63%, #2C001E 100%);
     background-position: top 60% left, top left, top 10% left 53.6%, center right;
     background-repeat: no-repeat;
-    background-size: 70% 200%, 100% 100%, 10% 120%, cover;
+    background-size: 90% 100%, 100% 100%, 10% 120%, cover;
 
 
     @media (max-width: $breakpoint-medium) {
